fixed window overlap

--- a/issueWork/CSS__issues/index.css
+++ b/issueWork/CSS__issues/index.css
@@ -14,14 +14,14 @@ body {
 .grid {
   display: grid;
   grid-template-columns: 1fr;
-  grid-auto-rows: 360px;
   justify-content: center;
   justify-items: center;
 }
 
 .grid__container {
-  width: 320px;
+  width: 100%;
   background-color: white;
+  padding-bottom: 1rem;
 }
 
 .grid__container--purple {
